Changed folder structure for compose files and updated README.md.